[Navigation] Cross document push navigations don't prune correctly https://bugs.webkit.org/show_bug.cgi?id=282622 rdar://139734080

Reviewed by Rob Buis.

When doing a "push" navigation, make sure we prune forward navigation
entries if there are any.

* LayoutTests/imported/w3c/web-platform-tests/navigation-api/navigation-history-entry/entries-after-cross-document-forward-pruning-expected.txt:
* Source/WebCore/page/Navigation.cpp:
(WebCore::Navigation::initializeForNewWindow):

Canonical link: https://commits.webkit.org/287548@main